# hse_prod_cpp_map_reduce_2023

./: .gitignore  CMakeLists.txt  README.md
examples/: file_001.txt  file_002.txt  war_and_peace.txt
include/map_reduce/: map_reduce.hpp
libsrc/map_reduce/: CMakeLists.txt
libsrc/map_reduce/src/: map_reduce.cpp
projects/app/: CMakeLists.txt
projects/app/src/: main.cpp
test/app/: CMakeLists.txt  test_app.py
test/libsrc/map_reduce/: CMakeLists.txt
test/libsrc/map_reduce/src/: test.cpp
